--- a/src/widgets/StandingsWidget/DriverRow/DriverRow.module.scss
+++ b/src/widgets/StandingsWidget/DriverRow/DriverRow.module.scss
@@ -18,7 +18,7 @@
 }
 
 .driverRowPlayer {
-  background: $widget-row-player-gradient;
+  background: $widget-row-player-bg;
 }
 
 .driverRowOffTrack {
