--- a/src/widgets/StandingsWidget/SessionFooter/SessionFooter.module.scss
+++ b/src/widgets/StandingsWidget/SessionFooter/SessionFooter.module.scss
@@ -1,5 +1,4 @@
 .sessionFooter {
-  margin-top: sp(xs);
   background: rgba(18, 18, 20, $opacity-heavy);
   padding: sp(xs) sp(md); // Narrower vertical padding (exactly like StandingsHeader)
   display: flex;
